# testtool

./: .git_setup_guide.md  .gitattributes  .gitignore  README.md  setup_git.ps1  setup_remote.ps1
Result/print_preview/: unknown_sn_t.zpl
TestTool/: MES模块功能说明.md  README.md  TestTool.spec  UUT模块功能说明.md  config_selfcheck.yaml  requirements.txt  security_module_design.md  变量功能完成总结.md  工程模式测试配置完成总结.md  工程测试简化版完成总结.md  数据流向分析.md  测试Case二次开发指南.md  测试Case快速入门.md  生产线测试工具架构分析.md  错误修复总结-20251030.md
TestTool/${torque_log_dir}/: ${sn}_extend.csv  ${sn}_kick.csv
TestTool/Config/: config.yaml
TestTool/Result/: sn_counter_demo.json
TestTool/Seq/: Vita01-cal-1.yaml  Vita01-motor-1.yaml  Vita01-motorcal-1.yaml  YAML测试序列使用说明.md  mes-debug.yaml  vita-fcts100.yaml  vita-fcts100efuse.yaml  vita-fctx5.yaml  vita-servo-id1.yaml  vita-servo-id2.yaml  vita01-burnin-1.yaml  vita01-head.yaml  vita01-head1.yaml  vita01-headmodel.yaml  vita01-machine-0.yaml  vita01-machine-1.yaml  vita01-upload.yaml  vita01-uwb-1.yaml  vita01-uwb-2.yaml  变量使用说明.md  工程测试简化版使用说明.md  快速开始.md  狗腿测试.yaml
TestTool/client/: .gitignore  BUILD.bazel  README.md  USER_GUIDE.md  install.py  pyproject.toml
TestTool/client/vita_engineer_client/: README_JSON_CONFIG.md  __init__.py  command_config.json  crypto_utils.py  engineer_client.py  engineer_cmd_runner.py  gui_example.py  ota_deploy_gui.py  pointcloud_processor.py  protocol.py  response_handlers.py  stability_test_cases.json  test_all_runner.py  test_cases_config.json  test_engineer_client.py
TestTool/src/: __init__.py
scripts/: debug_create_device_json.py
(+204 files in other folders)
